--- a/src/home_work1/readme
+++ b/src/home_work1/readme
@@ -1,7 +1,7 @@
         home_work_1_2 пункт дз 1.2
         home_work_1_3 пункт дз 1.3 
         home_work_2 пункт 2 дз
-        (5 + 7 > 20 ? 68 >= 68 : 22 * 2 >> 2++) / --8 - эта операция у меня не проводится , до сих пор разбираюсь в чем проблемма
+        6 - 2 > 3 && 12 * 12 <= 119 - эта операция не выполняется т.к. тип boolean
       
         home_work_3 пункт дз 3 , привел операторы класса math
         home_work_4 пункт дз 4 , прога-будильник
